Update analysis after EASE review

--- a/jupyter_scripts/analysis.ipynb
+++ b/jupyter_scripts/analysis.ipynb
@@ -1149,37 +1149,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "3c883285-faf4-49fd-8870-27c28181882e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count    808.000000\n",
-       "mean       6.613800\n",
-       "std        1.507585\n",
-       "min        0.000000\n",
+       "count    786.000000\n",
+       "mean       6.798919\n",
+       "std        1.037448\n",
+       "min        2.830000\n",
        "25%        6.090000\n",
-       "50%        6.850000\n",
+       "50%        6.935000\n",
        "75%        7.390000\n",
        "max        9.100000\n",
        "Name: quality, dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# SBOM quality stats\n",
-    "df.quality.describe()"
+    "df_clean_quality = df[df.quality!=0]\n",
+    "df_clean_quality.quality.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "id": "199e4e40-adf7-4b62-911d-306510598405",
    "metadata": {
     "scrolled": true
@@ -1230,57 +1231,57 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>cyclonedx_json</th>\n",
-       "      <td>342.0</td>\n",
-       "      <td>6.799678</td>\n",
-       "      <td>1.295124</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>341.0</td>\n",
+       "      <td>6.819619</td>\n",
+       "      <td>1.243340e+00</td>\n",
+       "      <td>2.83</td>\n",
        "      <td>5.65</td>\n",
-       "      <td>6.950</td>\n",
-       "      <td>7.8825</td>\n",
+       "      <td>6.95</td>\n",
+       "      <td>7.900</td>\n",
        "      <td>9.06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>cyclonedx_xml</th>\n",
        "      <td>43.0</td>\n",
        "      <td>7.238605</td>\n",
-       "      <td>1.302128</td>\n",
+       "      <td>1.302128e+00</td>\n",
        "      <td>4.78</td>\n",
        "      <td>6.03</td>\n",
-       "      <td>7.960</td>\n",
-       "      <td>8.2350</td>\n",
+       "      <td>7.96</td>\n",
+       "      <td>8.235</td>\n",
        "      <td>8.68</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>spdx_json</th>\n",
-       "      <td>330.0</td>\n",
-       "      <td>6.593121</td>\n",
-       "      <td>1.444305</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>318.0</td>\n",
+       "      <td>6.841918</td>\n",
+       "      <td>6.762868e-01</td>\n",
+       "      <td>4.35</td>\n",
        "      <td>6.09</td>\n",
-       "      <td>6.955</td>\n",
-       "      <td>7.3800</td>\n",
+       "      <td>7.32</td>\n",
+       "      <td>7.380</td>\n",
        "      <td>8.18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>spdx_spdx</th>\n",
-       "      <td>30.0</td>\n",
-       "      <td>5.332667</td>\n",
-       "      <td>3.334613</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>6.955652</td>\n",
+       "      <td>1.689868e+00</td>\n",
        "      <td>4.74</td>\n",
-       "      <td>6.080</td>\n",
-       "      <td>7.7675</td>\n",
+       "      <td>5.22</td>\n",
+       "      <td>6.91</td>\n",
+       "      <td>8.815</td>\n",
        "      <td>9.10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>spdx_yaml</th>\n",
-       "      <td>63.0</td>\n",
-       "      <td>5.896667</td>\n",
-       "      <td>1.076294</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>6.090000</td>\n",
+       "      <td>2.686648e-15</td>\n",
+       "      <td>6.09</td>\n",
+       "      <td>6.09</td>\n",
        "      <td>6.09</td>\n",
        "      <td>6.090</td>\n",
-       "      <td>6.0900</td>\n",
        "      <td>6.09</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1288,47 +1289,73 @@
        "</div>"
       ],
       "text/plain": [
-       "                count      mean       std   min   25%    50%     75%   max\n",
-       "format                                                                    \n",
-       "cyclonedx_json  342.0  6.799678  1.295124  0.00  5.65  6.950  7.8825  9.06\n",
-       "cyclonedx_xml    43.0  7.238605  1.302128  4.78  6.03  7.960  8.2350  8.68\n",
-       "spdx_json       330.0  6.593121  1.444305  0.00  6.09  6.955  7.3800  8.18\n",
-       "spdx_spdx        30.0  5.332667  3.334613  0.00  4.74  6.080  7.7675  9.10\n",
-       "spdx_yaml        63.0  5.896667  1.076294  0.00  6.09  6.090  6.0900  6.09"
+       "                count      mean           std   min   25%   50%    75%   max\n",
+       "format                                                                      \n",
+       "cyclonedx_json  341.0  6.819619  1.243340e+00  2.83  5.65  6.95  7.900  9.06\n",
+       "cyclonedx_xml    43.0  7.238605  1.302128e+00  4.78  6.03  7.96  8.235  8.68\n",
+       "spdx_json       318.0  6.841918  6.762868e-01  4.35  6.09  7.32  7.380  8.18\n",
+       "spdx_spdx        23.0  6.955652  1.689868e+00  4.74  5.22  6.91  8.815  9.10\n",
+       "spdx_yaml        61.0  6.090000  2.686648e-15  6.09  6.09  6.09  6.090  6.09"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.groupby('format').quality.describe()"
+    "df_clean_quality.groupby('format').quality.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "id": "1f8768f2-74e4-433e-830d-1eed57370048",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/kj/6309bkpj25369522dyfd5dxh0000gn/T/ipykernel_52199/213809533.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_clean_quality['extension'] = df_clean_quality.format.apply(lambda x: x.split(\"_\")[1])\n"
+     ]
+    }
+   ],
    "source": [
-    "df['extension'] = df.format.apply(lambda x: x.split(\"_\")[1])"
+    "df_clean_quality['extension'] = df_clean_quality.format.apply(lambda x: x.split(\"_\")[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "c177f669-09e4-49f1-8df9-157b630a9d6b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/kj/6309bkpj25369522dyfd5dxh0000gn/T/ipykernel_52199/4285247223.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_clean_quality['real_format'] = df_clean_quality.format.apply(lambda x: x.split(\"_\")[0])\n"
+     ]
+    }
+   ],
    "source": [
-    "df['real_format'] = df.format.apply(lambda x: x.split(\"_\")[0])"
+    "df_clean_quality['real_format'] = df_clean_quality.format.apply(lambda x: x.split(\"_\")[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "id": "69720dd1-8a82-4637-99fe-313cad1b1845",
    "metadata": {},
    "outputs": [
@@ -1377,24 +1404,24 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>cyclonedx</th>\n",
-       "      <td>385.0</td>\n",
-       "      <td>6.848701</td>\n",
-       "      <td>1.301588</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>384.0</td>\n",
+       "      <td>6.866536</td>\n",
+       "      <td>1.255297</td>\n",
+       "      <td>2.83</td>\n",
        "      <td>5.65</td>\n",
        "      <td>6.95</td>\n",
-       "      <td>8.04</td>\n",
+       "      <td>8.0425</td>\n",
        "      <td>9.06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>spdx</th>\n",
-       "      <td>423.0</td>\n",
-       "      <td>6.400000</td>\n",
-       "      <td>1.645787</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>402.0</td>\n",
+       "      <td>6.734328</td>\n",
+       "      <td>0.770305</td>\n",
+       "      <td>4.35</td>\n",
        "      <td>6.09</td>\n",
-       "      <td>6.45</td>\n",
-       "      <td>7.37</td>\n",
+       "      <td>6.47</td>\n",
+       "      <td>7.3700</td>\n",
        "      <td>9.10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1402,24 +1429,24 @@
        "</div>"
       ],
       "text/plain": [
-       "             count      mean       std  min   25%   50%   75%   max\n",
-       "real_format                                                        \n",
-       "cyclonedx    385.0  6.848701  1.301588  0.0  5.65  6.95  8.04  9.06\n",
-       "spdx         423.0  6.400000  1.645787  0.0  6.09  6.45  7.37  9.10"
+       "             count      mean       std   min   25%   50%     75%   max\n",
+       "real_format                                                           \n",
+       "cyclonedx    384.0  6.866536  1.255297  2.83  5.65  6.95  8.0425  9.06\n",
+       "spdx         402.0  6.734328  0.770305  4.35  6.09  6.47  7.3700  9.10"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.groupby('real_format').quality.describe()"
+    "df_clean_quality.groupby('real_format').quality.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "id": "7d0c0736-da14-4bbe-9420-d913c7355a51",
    "metadata": {},
    "outputs": [
@@ -1468,46 +1495,46 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>json</th>\n",
-       "      <td>672.0</td>\n",
-       "      <td>6.698244</td>\n",
-       "      <td>1.373282</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>659.0</td>\n",
+       "      <td>6.830379</td>\n",
+       "      <td>1.009582e+00</td>\n",
+       "      <td>2.83</td>\n",
        "      <td>6.09</td>\n",
        "      <td>6.95</td>\n",
-       "      <td>7.3900</td>\n",
+       "      <td>7.390</td>\n",
        "      <td>9.06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>spdx</th>\n",
-       "      <td>30.0</td>\n",
-       "      <td>5.332667</td>\n",
-       "      <td>3.334613</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>6.955652</td>\n",
+       "      <td>1.689868e+00</td>\n",
        "      <td>4.74</td>\n",
-       "      <td>6.08</td>\n",
-       "      <td>7.7675</td>\n",
+       "      <td>5.22</td>\n",
+       "      <td>6.91</td>\n",
+       "      <td>8.815</td>\n",
        "      <td>9.10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>xml</th>\n",
        "      <td>43.0</td>\n",
        "      <td>7.238605</td>\n",
-       "      <td>1.302128</td>\n",
+       "      <td>1.302128e+00</td>\n",
        "      <td>4.78</td>\n",
        "      <td>6.03</td>\n",
        "      <td>7.96</td>\n",
-       "      <td>8.2350</td>\n",
+       "      <td>8.235</td>\n",
        "      <td>8.68</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>yaml</th>\n",
-       "      <td>63.0</td>\n",
-       "      <td>5.896667</td>\n",
-       "      <td>1.076294</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>6.090000</td>\n",
+       "      <td>2.686648e-15</td>\n",
        "      <td>6.09</td>\n",
        "      <td>6.09</td>\n",
-       "      <td>6.0900</td>\n",
+       "      <td>6.09</td>\n",
+       "      <td>6.090</td>\n",
        "      <td>6.09</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1515,26 +1542,26 @@
        "</div>"
       ],
       "text/plain": [
-       "           count      mean       std   min   25%   50%     75%   max\n",
-       "extension                                                           \n",
-       "json       672.0  6.698244  1.373282  0.00  6.09  6.95  7.3900  9.06\n",
-       "spdx        30.0  5.332667  3.334613  0.00  4.74  6.08  7.7675  9.10\n",
-       "xml         43.0  7.238605  1.302128  4.78  6.03  7.96  8.2350  8.68\n",
-       "yaml        63.0  5.896667  1.076294  0.00  6.09  6.09  6.0900  6.09"
+       "           count      mean           std   min   25%   50%    75%   max\n",
+       "extension                                                              \n",
+       "json       659.0  6.830379  1.009582e+00  2.83  6.09  6.95  7.390  9.06\n",
+       "spdx        23.0  6.955652  1.689868e+00  4.74  5.22  6.91  8.815  9.10\n",
+       "xml         43.0  7.238605  1.302128e+00  4.78  6.03  7.96  8.235  8.68\n",
+       "yaml        61.0  6.090000  2.686648e-15  6.09  6.09  6.09  6.090  6.09"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.groupby('extension').quality.describe()"
+    "df_clean_quality.groupby('extension').quality.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "id": "81924fd4-e4f5-4b03-ba95-8d3eb83f836b",
    "metadata": {},
    "outputs": [
@@ -1545,37 +1572,39 @@
        "Name: name, dtype: object"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Project(s) with best quality\n",
-    "max = df.quality.max()\n",
-    "df[df.quality == max].name"
+    "max_quality = df_clean_quality.quality.max()\n",
+    "df_clean_quality[df_clean_quality.quality == max_quality].name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "id": "5e0bc9fc-8a65-4b75-859f-d084186ad1a3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "22"
+       "458    hook_tesy\n",
+       "Name: name, dtype: object"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Project(s) with worst quality\n",
-    "len(df[df.quality == 0].name)"
+    "min_quality = df_clean_quality.quality.min()\n",
+    "df_clean_quality[df_clean_quality.quality == min_quality].name"
    ]
   },
   {
